# cs336

./: .gitignore  Makefile  README.md  new_cmd.md  pyproject.toml  sitecustomize.py  vllm_command_explained.md
.github/workflows/: ci.yaml
.sisyphus/evidence/: task-1-scaffold.txt
configs/data/: alpaca_zh_51k.yaml
configs/eval/: offline.yaml
configs/serve/: loadtest.yaml  qwen35_122b_tp2_trace.yaml  vllm_openai_lora.yaml
configs/train/: qwen2p5_7b_qlora_ddp4.yaml
docker/: Dockerfile  compose.yaml
docker/prometheus/: prometheus.yml  render-and-run.sh
docs/: self-child-repo-sweep-report.md
docs/evidence/: gpu-e2e-2026-04-16.md
docs/reviews/: README.md  index.html  inference-metrics-codepath-review.md  loadtest-deep-dive.md  make-e2e-codepath-review.md  make-e2e-overview.md  manifest.json  manual-serve-command-codepath-review.md  qwen3.5-122b-a10b-gptq-int4-config-review.md  qwen3.5-122b-a10b-gptq-int4-config.json  repo-structure-map.md  serve-vllm-deep-dive.md  train-sft-deep-dive.md
scripts/: e2e_gpu.sh  loadtest_locust.py  serve_trace_gpu23.sh  smoke_cpu.sh
src/aiinfra_e2e/: __init__.py  cli.py  config.py  (+4 more)
tests/: test_cli_help.py  test_cli_import_lazy.py  test_config_schema.py  test_golden_eval.py  test_gpu_selection.py  test_import_smoke.py  test_label_masking.py  test_loadtest_config.py  test_manifest.py  test_obs_mlflow.py  test_openai_api_smoke.py  test_prompt_golden.py  test_resource_plan.py  test_resume_checkpoint.py  test_script_entrypoints.py  test_serve_trace_run.py  test_split_deterministic.py  test_train_smoke_cpu.py  test_trl_compat.py
(+33 files in other folders)
